# MarinFold

./: .gitignore  AGENTS.md  MODELS.yaml  README.md  RESOURCES.md  UPDATES.md
document_structures/: AGENTS.md  README.md  pyproject.toml
document_structures/contacts_and_distances_v1/: README.md  pyproject.toml
document_structures/marinfold_document_structures/: __init__.py  cli.py  core.py  interface.py  writers.py
evals/: AGENTS.md  README.md  pyproject.toml
evals/marinfold_evals/: __init__.py
experiments/: AGENTS.md  README.md  TEMPLATE.md  index.md  pyproject.toml
experiments/exp0_models_protein_docs_initial_port/: README.md  continue_train_protein_1b_distance_masked.py  create_protein_tokenizer.py  export_protein_100m_distance_masked.py  export_protein_1_5b_distance_masked.py  export_protein_1b.py  export_protein_3b_distance_masked.py  export_protein_420m_deep_distance_masked.py  protein_distogram_eval.py  protein_train_common.py  summary_narrative.md  train_protein_100m_unmasked.py  train_protein_1_5b_distance_masked.py  train_protein_1b.py  train_protein_1b_all_docs_unmasked.py  train_protein_1b_distance_masked.py  train_protein_1b_unmasked.py  train_protein_30m_distance_masked.py  train_protein_400m_distance_masked.py
experiments/exp100_data_only_correct_documents_contacts_v1/: README.md  aggregate_results.py  constrained_grammar.py  gen_constrained_worker_hf_gpu.py  gen_constrained_worker_vllm.py  gen_constrained_worker_vllm_tpu.py  gen_prompts.py  only_correct_backend.py  publish_to_hf.py  pyproject.toml  select_round0_all.py  select_targets.py
experiments/exp102_rollout_accuracy_factors/: .gitignore  README.md  analysis_colab.ipynb  analysis_starter.py  gen_prompts.py  gen_rollouts_worker_hf.py  publish_to_hf.py  pyproject.toml  select_targets.py
experiments/exp105_data_contacts_and_coordinates_v1_zephyr/: NOTES.md  README.md  cli.py  generate_rows.py  local_generate_train.py  local_pilot.py  pyproject.toml  summary_narrative.md
experiments/exp108_models_qwen_3b_contacts_v1/: README.md  contacts_v1_train_common.py  dispatch_train.py  export_qwen_3b_contacts_v1.py  pyproject.toml  stage_data_to_coreweave.py  summary_narrative.md  train_qwen_3b_contacts_v1_sweep.py
experiments/exp112_models_qwen_3b_nemo_mfu/: README.md  common.py  dispatch_nemo.py  nemo_train_qwen3.py  prepare_megatron_data.py  pyproject.toml  summary_narrative.md
experiments/exp120_models_regen_vs_reepoch_contacts_v1/: README.md  build_arm_a_aligned.py  consolidate_regen_val.py  contacts_v1_ft_common.py  downstream_metrics.py  export_checkpoints.py  mirror_regen_train.py  pyproject.toml  select_round0_val.py  train_regen_vs_reepoch_sweep.py
experiments/exp123_document_structures_contacts_v1_pause_tokens/: README.md  pyproject.toml  smoke_run.py  summary_narrative.md
experiments/exp126_data_contacts_v1_think/: README.md  generate_local.py  publish_to_hf.py  pyproject.toml  summary_narrative.md
experiments/exp12_data_protenix_foldbench_monomers/: .gitignore  README.md  cli.py  distogram_hook.py  modal_app.py  msa_depth.py  plot.py  prepare_inputs.py  pyproject.toml  score.py  select_best.py  summary_narrative.md
experiments/exp132_data_contacts_and_crops_v1/: README.md  generate_local.py  generate_rows.py  publish_to_hf.py  pyproject.toml
experiments/exp137_models_contacts_and_crops_v1_1_5b/: .gitignore  README.md  crops_train_common.py  export_checkpoints.py  mirror_crops_corpus.py  mirror_on_pod.py  pyproject.toml  train_crops_1_5b.py
experiments/exp139_data_contacts_v1_esm_atlas/: README.md  cli.py  generate_rows.py  mirror_source.py  publish.py  pyproject.toml  summary_narrative.md
experiments/exp142_evals_short_document_bias/: README.md  analyze_short_bias.py  gen_rollouts_worker_eval.py  pyproject.toml  rollout_metrics.py  rollout_metrics_all.parquet  select_eval_targets.py  summary.csv  targets.parquet
experiments/exp147_models_on_the_fly_contacts_v1_pilot/: README.md  build_summary.py  premade_contacts_dataset.py  pyproject.toml  smoke_dataset.py  stage_pilot.py  summary_narrative.md  train.py
experiments/exp150_models_reproduce_eric_contacts_v1/: README.md  contacts_v1_repro_common.py  export_checkpoints.py  pyproject.toml  train_contacts_v1_repro.py  verify_cache.py  verify_config.py
experiments/exp1_document_structures_contacts_and_distances_v1/: README.md  _parse.py  _vocab.py  cli.py  generate.py  inference.py  parse.py  pyproject.toml  structure.py  summary_narrative.md  vocab.py
experiments/exp1_models_protein_docs_initial_port/: README.md  export_protein_100m_unmasked.py  export_protein_1b_distance_masked.py  export_protein_1b_unmasked.py  export_protein_30m_distance_masked.py  export_protein_400m_distance_masked.py  pyproject.toml  train_protein_100m_distance_masked.py  train_protein_100m_unmasked.py  train_protein_1b_distance_masked.py  train_protein_3b_distance_masked.py  train_protein_420m_deep_distance_masked.py
experiments/exp20_evals_marinfold_1b_foldbench/: .gitignore  README.md  canonical_sequence.py  collect_timings.py  modal_app.py  plot_comparison.py  pyproject.toml  run_1b_eval.py  score_comparison.py  score_marinfold.py
experiments/exp26_evals_marinfold_1_5b_foldbench/: README.md  download_outputs.py  fetch_protenix_data.py  launch_iris.sh  modal_app.py  plot_comparison.py  pyproject.toml  run_1b_eval.py  run_eval.py  score_comparison.py  score_marinfold.py  summary_narrative.md  worker_entry.sh
experiments/exp27_evals_improved_inference_algorithm/: .gitignore  MEDIUM_BIAS_OBSERVATION.md  PROTEINS_USED.md  README.md  RESULTS_LOG.md  append_experiment_row.py  combined_algorithm.py  gt_filtered_inference.py  gt_oracle_inference.py  iterative_inference.py  make_slides.py  naive_inference.py  probe_range_entropy.py  pyproject.toml  run_baseline.py  run_gt_filtered.py  run_gt_oracle.py  run_iterative.py  slides.tex  (+10 more)
inference/: AGENTS.md  README.md  pyproject.toml
marinfold/: AGENTS.md  README.md  pyproject.toml
models/: AGENTS.md  README.md  pyproject.toml
scripts/: _lib.py  history.py  itemize.py  pyproject.toml  scaffold.py
(+715 files in other folders)
