[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marinfold-document-structures"
version = "0.1.0"
description = "MarinFold document_structures/ library — interface + local CLI for document-structure impls."
requires-python = ">=3.11"
# Stdlib + pyarrow (for --out parquet) + tokenizers/transformers (for
# build_tokenizer). Specific implementations bring their own structure-
# parsing (gemmi / biotite / biopython) and eval (vllm / torch) deps.
dependencies = [
    "pyarrow",
    "tokenizers>=0.15",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = []

[project.scripts]
"marinfold-document-structure" = "marinfold_document_structures.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["marinfold_document_structures"]
