[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marinfold-document-structures"
version = "0.2.0"
description = "MarinFold document_structures/ library — shared types, tokenizer, and output writers for document-structure impls."
requires-python = ">=3.11"
# Stdlib + pyarrow (for parquet writers) + tokenizers/transformers
# (for build_tokenizer). Specific implementations bring their own
# structure-parsing (gemmi / biotite / biopython) and eval (vllm /
# torch) deps, plus their own argparse cli.py.
dependencies = [
    "pyarrow",
    "tokenizers>=0.15",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["marinfold_document_structures"]
