[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marinfold-inference"
version = "0.1.0"
description = "MarinFold inference/ library — backend abstraction over vLLM / transformers / MLX for next-token logprob queries."
requires-python = ">=3.11"
# Base install pulls only the resolver + tokenizer deps. Each
# backend's heavyweight runtime is gated behind an optional extra
# below and lazy-imported inside its module.
dependencies = [
    "huggingface_hub>=0.24",
    "numpy",
    "pyyaml>=6",
    "tokenizers>=0.15",
    "transformers>=4.40",
]

[project.optional-dependencies]
# Linux+GPU production path.
vllm = ["vllm>=0.6"]
# Generic torch path — runs on Apple Silicon via MPS, on Linux/macOS
# CPU otherwise. Lowest-effort local-eval option.
transformers = ["torch>=2.4", "accelerate>=0.30"]
# Apple Silicon native path via MLX. Darwin-only wheels; uv skips on
# other platforms automatically.
mlx = ["mlx>=0.18; sys_platform == 'darwin'", "mlx-lm>=0.20; sys_platform == 'darwin'"]

[dependency-groups]
dev = []

[tool.uv]
package = true
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.hatch.build.targets.wheel]
packages = ["marinfold_inference"]
