[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contacts-and-distances-v1"
version = "0.1.0"
description = "contacts-and-distances-v1 document structure: generate / infer / evaluate implementation."
requires-python = ">=3.11,<3.13"
dependencies = [
    "marinfold",
    "gemmi>=0.6",       # mmCIF / PDB parsing for AFDB inputs
    "numpy",
    "pyarrow",
]

[project.optional-dependencies]
# Backend extras: pick one based on platform. Each delegates to the
# matching extra on the marinfold package, so the heavy runtime
# (vllm / torch / mlx) is only installed when you ask for it.
#
# - eval        → vLLM (Linux+GPU production path)
# - eval-local  → transformers (Apple Silicon MPS, CPU, or CUDA)
# - eval-mlx    → MLX (Apple Silicon native, fastest local)
eval       = ["marinfold[vllm]"]
eval-local = ["marinfold[transformers]"]
eval-mlx   = ["marinfold[mlx]"]
# Network-dependent tests need huggingface_hub installed.
test = ["pytest>=8", "huggingface_hub>=0.24"]

[project.scripts]
# Lower-level CLI for direct invocation; the high-level
# ``marinfold infer / evaluate`` lives in the marinfold package.
contacts-and-distances-v1 = "contacts_and_distances_v1.cli:main"

[dependency-groups]
dev = []

[tool.uv]
package = true
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
marinfold = { path = "../../marinfold", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/contacts_and_distances_v1"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet (e.g. byte-identity check against the published tokenizer on HF Hub). Skip with `pytest -m 'not network'`.",
]
