[project]
name = "exp105-data-contacts-and-coordinates-v1-zephyr"
version = "0.1.0"
description = "Generate the contacts-and-coordinates-v1 training-document dataset at scale on the marin Iris cluster via Zephyr, reusing exp53's contacts-v1 selection manifest (the same proteins). Calls into marinfold's contacts_and_coordinates_v1 generator (no re-implementation)."
requires-python = ">=3.11,<3.13"
# Base install covers the per-row generation logic and the marin-zephyr
# runtime used to fan out on Iris. marin-zephyr is in base (not an extra) so
# Iris workers get the runtime however the job ships its env.
dependencies = [
    "marinfold[contacts-v1]",  # contacts_and_coordinates_v1.generate_document + pyconfind
    "pyconfind[fast]",         # numba JIT contact backend for the at-scale run
    "gemmi>=0.6",              # parse mmCIF bytes -> gemmi.Structure
    "numpy",                   # frame transform (rotation/translation)
    "pyarrow",                 # parquet read/write + Zephyr-native row dicts
    "fsspec",                  # uniform local + cloud IO for per-row cif fetch
    "gcsfs",                   # gs:// for the AFDB public bucket + marin output
    "huggingface_hub",         # hf:// publish
    "marin-zephyr",            # distributed generation on marin Iris
    "marin-iris",              # the `iris` job-submission CLI + GCP provider
    # Pin httpx < 1: prerelease=allow (needed for some marin deps) otherwise
    # floats httpx to 1.0.dev*, whose Client() dropped the `timeout` kwarg that
    # marin-iris's GCP provider passes -> iris CLI crashes on submit.
    "httpx>=0.28.1,<1",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[dependency-groups]
dev = []

[tool.uv]
package = false
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

# marin packages for the WORKER/LAUNCHER env come from the `marin-*-latest`
# GitHub release assets (the same source models/pyproject.toml uses), NOT a git
# branch — the old `alxmrs/stamp-iris-build-date` pin is permanently dead (marin
# PR #5990 was closed unmerged and its branch deleted).
#
# IMPORTANT — the live controller enforces a 14-day client-freshness gate on
# *root* job submissions only (marin PR #5108; iris/cluster/controller/service.py
# `_check_client_freshness`). These `-latest` assets are currently FROZEN at
# 2026-05-29, so a client built from them is REJECTED at submit time
# ("marin-iris client is too old"). But child/worker tasks are exempt from the
# gate, and the worker env is `uv sync`'d from this pyproject independently, so
# the frozen wheels are fine HERE. The submitting client (the `iris job run`
# process on the workstation) must instead be a fresh (<14-day) marin-iris — use
# an editable install from a recent marin checkout (its git-commit date becomes
# the client revision date). See the README "Launching" section.
# One known cosmetic effect of the 2026-05-29 worker env against the current
# controller: zephyr's dashboard status-text push (finelog `register_table`)
# 404s and logs non-fatal "Failed to report task status text" warnings. The
# pipeline itself runs and writes correct output; only live dashboard status is
# missing.
find-links = [
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-zephyr-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-iris-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-fray-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-rigging-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-finelog-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799",
]

[tool.uv.sources]
# marinfold stays a git dep (not a local path) so the SAME pyproject resolves on
# remote Iris workers, which can't see this checkout. No rev/branch = origin/main
# HEAD at sync time; contacts_and_coordinates_v1 is on main as of PR #106.
marinfold = { git = "https://github.com/Open-Athena/MarinFold.git", subdirectory = "marinfold" }

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet (HF / GCS reads). Skip with `pytest -m 'not network'`.",
]
