[project]
name = "exp105-data-contacts-and-coordinates-v1-zephyr"
version = "0.1.0"
description = "Generate the contacts-and-coordinates-v1 training-document dataset at scale on the marin Iris cluster via Zephyr, reusing exp53's contacts-v1 selection manifest (the same proteins). Calls into marinfold's contacts_and_coordinates_v1 generator (no re-implementation)."
requires-python = ">=3.11,<3.13"
# Base install covers the per-row generation logic and the marin-zephyr
# runtime used to fan out on Iris. marin-zephyr is in base (not an extra) so
# Iris workers get the runtime however the job ships its env.
dependencies = [
    "marinfold[contacts-v1]",  # contacts_and_coordinates_v1.generate_document + pyconfind
    "pyconfind[fast]",         # numba JIT contact backend for the at-scale run
    "gemmi>=0.6",              # parse mmCIF bytes -> gemmi.Structure
    "numpy",                   # frame transform (rotation/translation)
    "pyarrow",                 # parquet read/write + Zephyr-native row dicts
    "fsspec",                  # uniform local + cloud IO for per-row cif fetch
    "gcsfs",                   # gs:// for the AFDB public bucket + marin output
    "huggingface_hub",         # hf:// publish
    "marin-zephyr",            # distributed generation on marin Iris
    # Pin httpx < 1: prerelease=allow (needed for some marin deps) otherwise
    # floats httpx to 1.0.dev*, whose Client() dropped the `timeout` kwarg that
    # marin-iris's GCP provider passes -> iris CLI crashes on submit.
    "httpx>=0.28.1,<1",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[dependency-groups]
dev = []

[tool.uv]
package = false
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
# Git deps (not local path) so the SAME pyproject resolves on remote Iris
# workers. contacts_and_coordinates_v1 lands on main via this PR; until then
# point the branch at the PR ref for the iris smoke.
marinfold = { git = "https://github.com/Open-Athena/MarinFold.git", subdirectory = "marinfold" }
marin-zephyr = { git = "https://github.com/marin-community/marin.git", subdirectory = "lib/zephyr", branch = "alxmrs/stamp-iris-build-date" }

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet (HF / GCS reads). Skip with `pytest -m 'not network'`.",
]
