[project]
name = "exp108-models-qwen-3b-contacts-v1"
version = "0.1.0"
description = "3B Qwen3 contacts-v1 sweep, 16 epochs, on the CoreWeave RNO2A H100 cluster — issue #108."
# >=3.12: the resolved marin-levanter dev line (0.2.21.dev+) dropped 3.11 support.
requires-python = ">=3.12,<3.13"
dependencies = [
    # Depend on the marin SOURCE dist names (marin-core == the `marin` module),
    # resolved from PyPI — NOT the `marin-*-latest` GitHub find-links, which are
    # FROZEN at the buggy 2026-05-29 build with the un-fixed cache-ledger READER.
    # The reader fix #6014 landed in `0.2.5.dev202606020954`. The `<0.3` bound is
    # essential: the frozen `0.99.dev` wheels sort ABOVE the fixed `0.2.x.dev`
    # ones. (See exp85.)
    "marin-core>=0.2.5.dev202606020954,<0.3",
    "marin-levanter>=0.2.5.dev202606020954,<0.3",
    "marin-iris>=0.2.5.dev202606020954,<0.3",
    "marin-zephyr>=0.2.5.dev202606020954,<0.3",
    "marin-rigging>=0.2.5.dev202606020954,<0.3",
    "marinfold-models",
    # marin.processing.tokenize -> marin.datakit.normalize imports `dupekit`.
    "marin-dupekit<0.3",
    "fsspec",
    "numpy",
    "pyarrow",
    "transformers",
    "tokenizers",
    # S3 access to the CoreWeave bucket — levanter reads the corpus/cache via
    # fsspec/s3fs on the workers (creds/endpoint injected by iris in-cluster).
    "s3fs",
    "boto3",
    # NB: do NOT pin huggingface-hub>=1.5 here — marin-levanter's transformers
    # requires hf-hub<1.0, so a >=1.5 pin makes the env unresolvable. The
    # data-staging script (which wants hf-hub>=1.5 for HF-bucket access) runs in
    # a SEPARATE workstation env, not this training venv. gcsfs likewise lives in
    # the staging env only.
]

[project.optional-dependencies]
# GPU (CUDA) install for the CoreWeave H100 training jobs. `marin-core[gpu]`
# brings the CUDA jax build (marin-levanter[gpu]); iris stages the CUDA
# toolchain (ptxas/nvlink/libdevice) onto the worker for `--extra gpu` jobs.
gpu = ["marin-core[gpu]; sys_platform == 'linux'"]
# The marin executor builds the CPU-only tokenize sub-job with `--extra cpu`
# (default_tokenize -> remote(..., pip_dependency_groups=["cpu"])), so this
# extra must exist. torch/torchvision are inlined (NOT left transitive) because
# uv source maps don't propagate through transitive extras, so the `pytorch-cpu`
# routing below only applies to direct deps.
cpu = [
    "marin-core[cpu]",
    # Match marin-core[cpu]'s pinned torch (lib/marin/pyproject.toml): the dev
    # line bumped 2.10.0 -> 2.11.0 / torchvision 0.25 -> 0.26. Keep in lockstep
    # or uv fails to resolve (torch==X vs torch==Y conflict).
    "torch==2.11.0",
    "torchvision==0.26.0+cpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
fork-strategy = "fewest"
prerelease = "allow"
# Linux only — the workstation launcher and the CoreWeave workers are all Linux.
# (Dropping the darwin split also sidesteps its separate resolution failures.)
environments = [
    "sys_platform == 'linux'",
]
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",
]

# marin-* resolve from PyPI (fixed `0.2.x.dev` builds; see the `<0.3` bound). We
# deliberately DO NOT list the `marin-*-latest` find-links — they are frozen at
# the buggy build and would win on version ordering. Only kitoken (a Rust wheel
# not on PyPI) is fetched as a prebuilt wheel.
find-links = [
    "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
]

[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
resiliparse = { index = "marin-resiliparse" }
torch = [{ index = "pytorch-cpu", extra = "cpu" }]
torchvision = [{ index = "pytorch-cpu", extra = "cpu" }]
# Resolve marinfold-models from git (the `models/` subdirectory), NOT a local
# `path = "../../models"`. Iris bundles only this experiment dir, so a relative
# path escaping the dir fails on the worker.
#
# !!! BEFORE LAUNCHING: set `rev` to the pushed commit that carries this
# experiment + the `gpu` extra added to models/pyproject.toml. For LOCAL
# iteration override the git dep with the working copy:
#   uv sync --extra gpu
#   uv pip install --reinstall-package marinfold-models ../../models
marinfold-models = { git = "https://github.com/Open-Athena/MarinFold.git", subdirectory = "models", rev = "62ba9db0056cd4569ea468b96c60b7e3716acce1" }
